# fibonacci_project

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/: fib.py  main.py  parallelization.py  parser.py
src/fib/: fib.py  main.py  parallelization.py  parser.py
tests/: test_fib_pytest.py  test_fib_unittest.py
